2003-10-11  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #121403

	* libgda/gda-connection.c (gda_connection_new): duplicate
	real_username and real_password strings before they are freed.

2003-10-07  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-quark-list.c:
	* libgda/gda-quark-list.h: introduced gda_quark_list_clear() +
	gda_quark_list_add_from_string() takes care of the 'cleanup'
	boolean parameter. 

2003-10-01  Murray Cumming  <murrayc@usa.net>
 
 	* libgda/Makefile.am: Use glib-mkenums to generate
 	the get_type() functions for the libgda enums. The build file
 	stuff is based on the same stuff in pango.

2003-10-01  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/doc/C/libgda-docs.sgml: fixed some typos and added
	  some information related to the MySQL provider.

2003-09-30  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-client.h: added missing prototype.

2003-09-19  Chris Silles <cas@starfire-programming.net>

	* configure.in: fixed msql switch check
	* providers/msql/gda-msql-provider.c:
	* providers/msql/gda-msql-recordset.c:
	* providers/msql/gda-msql-recordset.h: Fixed mSQL provider handling
	of non-query queries.

2003-09-17  Seth Remington <sremington@saberlogic.com>

	Fixes #117202

	* providers/freetds/gda-freetds-provider.[ch]: adapted to API changes
	in tds_connect.

2003-09-14  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.0.0

2003-09-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/xml/gda-xml-provider.c: killed warnings.
	(process_sql_commands): added missing implementation.

2003-09-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/tmpl/*.sgml:
	* libgda/gda-parameter.c:
	* libgda/gda-quark-list.c: added more inline documentation.

2003-08-26  Philippe CHARLIER <p.charlier@chello.be>

	* libgda/gda-value.c (gda_value_new_from_xml): the type is stored in
	the "gdatype" property, not "type".

	* libgda/gda-data-model.c (add_xml_row): fixed typo in call to strcmp().
